2010-10-14  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] compile TestNetscapePlugIn on Chromium mac
        https://bugs.webkit.org/show_bug.cgi?id=47633

        * WebKit.gyp:  Add a mac specific target for compiling TestNetscapePlugIn

2010-10-13  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Jian Li.

        [Chromium] Enable FILE_SYSTEM by default for chromium
        https://bugs.webkit.org/show_bug.cgi?id=47639

        * features.gypi: Add FILE_SYSTEM=1. Also remove FILE_READER=1
        as it seems to be not used anymore.

2010-10-13  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Nate Chapin.

        IndexedDB should fire some errors synchronously
        https://bugs.webkit.org/show_bug.cgi?id=47530

        * public/WebIDBCursor.h:
        * public/WebIDBDatabase.h:
        (WebKit::WebIDBDatabase::transaction):
        * public/WebIDBFactory.h:
        (WebKit::WebIDBFactory::open):
        * public/WebIDBObjectStore.h:
        * public/WebIDBTransactionCallbacks.h:
        * src/IDBCursorBackendProxy.cpp:
        (WebCore::IDBCursorBackendProxy::update):
        (WebCore::IDBCursorBackendProxy::continueFunction):
        (WebCore::IDBCursorBackendProxy::remove):
        * src/IDBCursorBackendProxy.h:
        * src/IDBDatabaseProxy.cpp:
        (WebCore::IDBDatabaseProxy::createObjectStore):
        (WebCore::IDBDatabaseProxy::removeObjectStore):
        (WebCore::IDBDatabaseProxy::setVersion):
        (WebCore::IDBDatabaseProxy::transaction):
        * src/IDBDatabaseProxy.h:
        * src/IDBIndexBackendProxy.cpp:
        (WebCore::IDBIndexBackendProxy::openCursor):
        (WebCore::IDBIndexBackendProxy::openKeyCursor):
        (WebCore::IDBIndexBackendProxy::get):
        (WebCore::IDBIndexBackendProxy::getKey):
        * src/IDBIndexBackendProxy.h:
        * src/IDBObjectStoreProxy.cpp:
        (WebCore::IDBObjectStoreProxy::get):
        (WebCore::IDBObjectStoreProxy::put):