@@ -1,3 +1,13 @@
+2010-10-14  John Abd-El-Malek  <jam@chromium.org>
+
+        Reviewed by Tony Chang.
+
+        [chromium] null check the widget before sending it data as calling didReceiveData might delete it
+        https://bugs.webkit.org/show_bug.cgi?id=47708
+
+        * src/FrameLoaderClientImpl.cpp:
+        (WebKit::FrameLoaderClientImpl::committedLoad):
+
 2010-10-14  Tony Chang  <tony@chromium.org>
 
         Reviewed by Kent Tamura.
